feat(ui): 添加国际化

--- a/src/main/resources/i18n/language.properties
+++ b/src/main/resources/i18n/language.properties
@@ -1,27 +1,7 @@
-panel.entity.title=Entity Setting
-panel.dao.title=Dao Setting
-panel.service.title=Service Setting
-panel.controller.title=Controller Setting
 # ==
-panel.entity.suffix=Suffix :
-panel.dao.suffix=Suffix :
-panel.service.suffix=Suffix :
-panel.controller.suffix=Suffix :
-# ==
-panel.entity.package=Package :
-panel.dao.package=Package :
-panel.dao.xml-package=Xml Package :
-panel.service.package=Package :
-panel.controller.package=Package :
-# ==
-panel.entity.package.select=选择...
-panel.dao.package.select=选择...
-panel.service.package.select=选择...
-panel.controller.package.select=选择...
-# ==
-panel.developer.title=Developer Info
-panel.developer.name=Name :
-panel.developer.email=Email :
+panel.developer.title=开发信息
+panel.developer.name=姓名：
+panel.developer.email=邮箱：
 # ==
 dir.project=项目路径：
 dir.source=代码路径：
@@ -29,7 +9,19 @@ dir.resources=资源路径：
 # ==
 btn.finish=完成，生成代码
 # ==
-table.table-name=Table :
-table.entity-name=Entity :
-table.entity-comment=Comment :
+table.table-name=表名：
+table.entity-name=实体名：
+table.entity-comment=注释 :
 table.uri=URI :
+# ==
+fileTypes.title=文件类型
+fileTypes.type=类型
+fileTypes.suffix=后缀
+fileTypes.package=包名
+fileTypes.ext=拓展名
+fileTypes.path=存储路径
+fileTypes.path.placeholder=默认为存储路径
+fileTypes.override=允许覆盖
+##
+table-decorator.not-null=表格数据模型不能为空
+
